***End TRAD gifted + ADHD

--- a/public/css/cv.css
+++ b/public/css/cv.css
@@ -13,6 +13,11 @@ p.moiPara, p.jeu {
     display: none;
   }
 }
+ul {
+  padding-inline-start: 40px;
+  padding-inline-end: 40px;
+}
+
 li {
   list-style: none;
 }
