--- a/public/css/scss/cv.scss
+++ b/public/css/scss/cv.scss
@@ -16,6 +16,10 @@ $myfont: monospace;
     }
 }
 
+ul {
+    padding-inline-start: 40px;
+    padding-inline-end: 40px;
+}
 
 li {
     list-style: none;  
