--- a/public/giftedADHD.pug
+++ b/public/giftedADHD.pug
@@ -11,10 +11,10 @@ append content
 				#INDEX
 					h1
 						span.english ADHD and High IQ: What&apos;s the Connection ?
-						span.french TDAH and QI élevé: Quels liens ?
+						span.french TDAH and QI Élevé : Quels liens ?
 					h3
 						span.english written by: Lynn-nore Chittom &bull; edited by: Daniel P. McGoldrick &bull; updated: 5/25/2011
-						span.french écrit par: Lynn-nore Chittom &bull; édité par: Daniel P. McGoldrick &bull; mis à jour: 5/25/2011
+						span.french Écrit par: Lynn-nore Chittom &bull; édité par: Daniel P. McGoldrick &bull; mis à jour: 5/25/2011
 							|  &bull; traduit par: Mikaël Garcia
 					p
 						span.english
@@ -35,9 +35,9 @@ append content
 							| Unfortunately, this does not actually negate the symptoms of the ADHD, though it may mask them for a while
 							| and make the diagnosis more difficult.
 						span.french 
-							| Invisible mais bien présent, il existe des enfants qui touché par un TDAH et un QI élevé.
-							| Malheureusement, cette intelligence ne compense pas les symptomes du TDAH bien qu'elle les rende 
-							| indetectable un certain temps, ce qui complique leur détection. 
+							| Invisible mais bien présent, il existe des enfants qui ont un TDAH et un QI élevé.
+							| Malheureusement, cette intelligence ne compense pas le trouble du déficit de l'attention avec hyperactivité 
+							| bien qu'elle le camoufle un certain temps, ce qui complique ce diagnostique. 
 					p
 						span.english
 							| Typically gifted children demonstrate a complicated combination of symptoms which
@@ -45,19 +45,19 @@ append content
 							| their age, along with a propensity toward hyperactivity. Or it may be demonstrated in early reading and
 							| tremendous ease with learning, combined with extremely poor social skills.
 						span.french
-							| Souvent, les enfants à haut potentitiel souffrent d'une combinaison complexe de symptômes dont la
-							| source est à la fois leur haut potentiel ainsi que la présence d'un TDAH.
-							| Cela peut inclure des capacités de perception ou de raisonnement au-delà de leur âge, avec une
-							| tendance naturelle vers l'hyperactivité. Ou alors, cela peut se remarquer par l'apprentissage précoce de la 
-							| lecture et une suprenante facilité d'appendre, combinées à d'extrèmement pauvres capacités sociales.
+							| Souvent, les enfants à hauts potentiels souffrent d'une combinaison compliquée de symptômes dont la
+							| source est leurs hauts potentiels ainsi que les TDAH.
+							| Celle-ci peut inclure des capacités de perception ou de raisonnement au-delà de leur âge, avec une
+							| tendance naturelle vers l'hyperactivité. Ou alors, elle se remarque par l'apprentissage précoce de la 
+							| lecture, de surprenantes facilités d'apprentissages, combinées à de très pauvres capacités sociales.
 					p
 						span.english
 							| Regardless of their intelligence, for children to be diagnosed with ADHD they must
 							| present symptoms from the following list for at least six months and symptoms must appear prior to age
 							| seven:
 						span.french
-							| Indépendamment de leur intelligence, pour être detecté comme présentant un TDAH, les enfants doivent présenter
-							| des symptômes de la liste suivante pendant plus de six mois avant l'âge de 7ans.
+							| En dépit de leur intelligence, les enfants sont peut-être concernés par le TDAH s'ils présentent
+							| des symptômes de la liste suivante pendant plus de six mois avant l'âge de 7ans :
 					ul
 						li
 							span.english Inability to sustain focus
@@ -73,7 +73,7 @@ append content
 							span.french Distraction
 						li
 							span.english Frequent shifts in conversation
-							span.french Changement de conversations fréquent
+							span.french Changements de conversations fréquents
 						li
 							span.english
 								| Hyperfocusing on activities of interest to the point of ignoring other responsibilities
@@ -90,13 +90,13 @@ append content
 							span.french Bondissements fréquents hors de leur chaise
 						li
 							span.english Running or climbing at inappropriate times and in inappropriate places
-							span.french Courrent ou escaladent à des endroits et des moments innapropriés
+							span.french Courent ou escaladent dans des endroits et à des moments inappropriés
 						li
 							span.english Inability to sit still or play quietly
 							span.french Incapacité à rester assis immobile ou à jouer calmement
 						li
 							span.english Excessive talking
-							span.french Bavardage excessif
+							span.french Bavardages excessifs
 						li
 							span.english Impulsivity
 							span.french Impulsivité
@@ -108,8 +108,8 @@ append content
 							| Children with high IQ levels are often able to circumvent detection of their ADHD if
 							| it is not caught early.
 						span.french
-							| Les enfants au QI élevé sont souvent capables de duper la detection de leur TDAH
-							| s'il n'est pas detecté précocément.
+							| Les enfants au QI élevé sont souvent capables de duper la détection de leur TDAH
+							| s'ils ne sont pas détectés précocement.
 					p
 						span.english
 							| By school time they are very capable of figuring out assignments even if they did not
@@ -146,9 +146,9 @@ append content
 							| limitations.
 						span.french
 							| Les signes risquent d'apparaître plus tard dans la vie des individus présentant à la fois un
-							| TDAH et une forte intelligence qui parfois gèrent pour manoeuvrer leur chemin à travers l'école en
+							| TDAH et une forte intelligence qui parfois gèrent pour manœuvrer leur chemin à travers l'école en
 							| surfant seulement sur leur capacité à comprendre. Ils manipulent leurs professeurs, le système 
-							| et réussissent sans embûches en s'impliquant suffisament, malgré leurs limites.
+							| et réussissent sans embûches en s'impliquant suffisamment, malgré leurs limites.
 					p
 						span.english
 							| During school years, the ADHD may go undetected and symptoms may be attributed to
@@ -157,7 +157,7 @@ append content
 							| difficulties sleeping due to hyperactivity, or struggling to remain organized or on-task. These symptoms can
 							| present themselves at any time, but that does not mean they are new symptoms.
 						span.french
-							| Pendant la scolarité, les TDAH riquent de rester invisibles et les troubles comportementaux attribués à de l'ennui ou de 
+							| Pendant la scolarité, le TDAH risque de rester invisible et les troubles comportementaux attribués à de l'ennui ou de 
 							| la provocation. Sorti du système scolaire, il devient alors évident que ces individus ont des difficultés avec 
 							| la mémoire à court terme et certaines aptitudes fonctionnelles basiques. Ils risquent alors de jongler 
 							| avec les tâches à l'extrême, d'avoir des problèmes de sommeil à cause de l'hyperactivité ou bien de lutter pour 
@@ -168,27 +168,27 @@ append content
 							| ADHD is a genetic neuropsychological disorder, and is not an adult-onset
 							| disorder.
 						span.french
-							| Un TDAH est un trouble neuro-psychologique génétique, et non un trouble qui survient chez l'adulte.
+							| Un TDAH est un trouble neuropsychologique génétique, et non un trouble qui survient chez l'adulte.
 					p
 						span.english
 							| When symptoms seem to appear later in life, individuals may initially deny their
 							| ADHD, but often eventually decide to pursue treatment on their own.
 						span.french
 							| Lorsque les symptômes semblent intervenir plus tard dans leur vie, ils risquent dans un premier
-							| temps de nier leur TDAH, mais souvent décident éventuellement de poursuivre un traitement d'eux-même.
+							| temps de nier leur TDAH, mais souvent décident éventuellement de poursuivre un traitement d'eux-mêmes.
 					p
 						span.english
 							| Medication can be effective, even if they did not treat their ADHD in this way during
 							| childhood or adolescence.
 						span.french
-							| Des médicaments peuvent fontionner, même s'ils n'en n'ont pas pris durant l'enfance ou l'adolescence.
+							| Des médicaments peuvent fonctionner, même s'ils n'en n'ont pas pris durant l'enfance ou l'adolescence.
 					p
 						span.english
 							| The most popular treatment options for adults with ADHD and High IQ are stimulant
 							| drugs which reduce their symptoms and enable their high intelligence to shine.
 						span.french
-							| Un des choix de traitement les plus courrant pour les adultes avec un TDAH sont des médicaments stimulants 
-							| qui réduisent leurs symptômes et permetent alors à leur haute intelligence de briller.
+							| Un des choix de traitement les plus courant pour les adultes avec un TDAH sont des médicaments stimulants 
+							| qui réduisent leurs symptômes et permettent alors à leur haute intelligence de briller.
 					p
 						span
 							| References:
