--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -1,5 +1,6 @@
 extends layoutNav.pug
 append head
+  link(rel='stylesheet' href='/static/css/styles.css')
   link(rel='stylesheet' href='/static/css/admin.css') 
 append content
   .content
