--- a/public/index.pug
+++ b/public/index.pug
@@ -1,4 +1,7 @@
 extends layoutNav.pug
+append head
+  link(rel='stylesheet' href='/static/css/styles.css')
+  link(rel='stylesheet' href='/static/css/cv.css')
 append content
   .content
     .table-cell
