--- a/public/jeuCV.pug
+++ b/public/jeuCV.pug
@@ -21,7 +21,6 @@ append content
     p.flags
       img#english(src='/static/img/uk.svg' alt='English' height='30')
       img#french(src='/static/img/france.svg' alt='Français' height='30')
-      img#spanish(src='/static/img/spain.svg' alt='spanish' height='30')
     #metier
       h1 IBM RPG &amp; Javascript Developer
     .competen#competen
@@ -49,11 +48,11 @@ append content
                 tr
                   td=player.name
                   td=player.score
-      //h2.french Comp&eacute;tences
-      //h2.spanish  Competencias
-      h2#skills Skills
+      //h2.titreH2.french Comp&eacute;tences
+      //h2.titreH2.spanish  Competencias
+      h2.titreH2#skills Skills
       .informatiquesCont.french.english.spanish#informatique
-        h3 Front-End Development
+        h3.titreH3 Front-End Development
         .informatiques#informatique
           .infoJeu JavaScript
           .infoJeu jade/PUG
@@ -62,7 +61,7 @@ append content
           .infoJeu SCSS
           .infoJeu BootStrap
           .infoJeu AngularJS
-        h3 Back-End Development
+        h3.titreH3 Back-End Development
         .informatiques#informatique
           .infoJeu NodeJS
           .infoJeu ExpressJS
@@ -71,7 +70,7 @@ append content
           .infoJeu mysql
           .infoJeu mongoDB
           .infoJeu WebSocket
-        h3 Tools
+        h3.titreH3 Tools
         .informatiquesLast
           .infoJeu IBM i
           .infoJeu Mac OSx
@@ -80,9 +79,9 @@ append content
           .infoJeu AutoCAD
           .infoJeu Photoshop
       .btp#btp.french.english.spanish
-        h3.french Techniques &amp; Design
-        h3.english Techniques &amp; Design
-        h3.spanish Técnicas &amp; diseño
+        h3.titreH3.french Techniques &amp; Design
+        h3.titreH3.english Techniques &amp; Design
+        h3.titreH3.spanish Técnicas &amp; diseño
         .info.french R&eacute;aliser l&rsquo;&eacute;tude technique d&rsquo;un projet de construction et en estimer le co&ucirc;t
         .info.english Conduct the technical study of a construction project and estimate the cost
         .info.spanish Estudio técnico de un proyecto de construcción y estimación del costo
@@ -93,7 +92,7 @@ append content
         .infolast.english Make a project execution details folder (Autocad, VectorWorks)
         .infolast.spanish Creación de carpetas de detalles de ejecución de proyectos (Autocad, VectorWorks)
       .commerciales#commerciales.french.english.spanish
-        h3 H to H
+        h3.titreH3 H to H
         .info.french Assistant r&eacute;gie au Palais des Festivals de Cannes et en boite de productions t&eacute;l&eacute;visuelles
         .info.english Assistant director at Palais des Festivals in Cannes and in a television productions company
         .info.spanish Asistente de dirección en el Palais des Festivals de Cannes y en oficina de producciones televisivas
@@ -105,125 +104,125 @@ append content
         .infolast.spanish Recepción, servicio y asesoramiento comercial
     .linkedin#linkedIn &nbsp;
     .competen#experiences
-      h2.french Exp&eacute;riences
-      h2.english Experiences
-      h2.spanish Experiencia profesional
+      h2.titreH2.french Exp&eacute;riences
+      h2.titreH2.english Experiences
+      h2.titreH2.spanish Experiencia profesional
       .jobs
-        h3 IBM i DevOp junior engineer
+        h3.titreH3 IBM i DevOp junior engineer
         .infojob.french CL, RPG IV, db2, OCSI janvier 2019
         .infojob.english CL, RPG, db2, OCSI january 2019
         .infojob.spanish CL, RPG, db2, OCSI enero 2019
       hr
       .jobs
-        h3 Webmaster
+        h3.titreH3 Webmaster
         .infojob.french Mise &agrave; jour de la base de donn&eacute;es site Ecommerce (magento) www.snow-concept.com, l&rsquo;Alpe d&rsquo;Huez, d&eacute;cembre 2016
         .infojob.english Update of the Ecommerce website database (magento) www.snow-concept.com, Alpe d'Huez, December 2016
         .infojob.spanish Actualización de la base de datos del sitio snow-concept.com (magento), Alpe d'Huez, diciembre de 2016
       hr
       .jobs
-        h3.french Technicien audio-visuel
+        h3.titreH3.french Technicien audio-visuel
         .infojob.french Accessoiriste: JLA productions, Martigues 2015
         .infojob.french Assistant r&eacute;gisseur: Auteurs Associ&eacute;s, Grasse 2014
         .infojob.french Renfort d&eacute;coration et figurations: Gazelle Cie, DEMD, Europacorp, Marseille 2013
-        h3.english Audio-visual technician
+        h3.titreH3.english Audio-visual technician
         .infojob.english Props manager: JLA productions, Martigues 2015
         .infojob.english Assistant director: Auteurs Associ&eacute;s, Grasse 2014
         .infojob.english Ripper and figuration: Gazelle Cie, DEMD, Europacorp, Marseille 2013
-        h3.spanish Técnico audiovisual
+        h3.titreH3.spanish Técnico audiovisual
         .infojob.spanish gerente de apoyos: JLA productions, Martigues 2015
         .infojob.spanish Subgerente: Auteurs Associ&eacute;s, Grasse 2014
         .infojob.spanish Refuerzo de decoración y figuración: Gazelle Cie, DEMD, Europacorp, Marseille 2013
         hr
       .jobs
-        h3.french Dessinateur Projeteur HVAC
+        h3.titreH3.french Dessinateur Projeteur HVAC
         .infojob.french Etude des projets de construction ERP &quot;Castorama&quot;, AUXITEC ing&eacute;nierie, Hy&egrave;res, septembre 2012
-        h3.english HVAC designer
+        h3.titreH3.english HVAC designer
         .infojob.english Study of construction projects ERP "Castorama" Toulouse union and Antibes, AUXITEC engineering, Hyères, September 2012
-        h3.spanish Diseñador de HVAC
+        h3.titreH3.spanish Diseñador de HVAC
         .infojob.spanish Estudio de proyectos de construcción de tiendas "Castorama" Toulouse Union y Antibes, ingeniería AUXITEC, Hyères, septiembre de 2012
         hr
       .jobs
-        h3.french Developpeur web
+        h3.titreH3.french Developpeur web
         .infojob.french Introduction &agrave; JavaScript (JQuery) www.stand-service.com Alphabet Stand Service La Garde, 2012
-        h3.english Web Developer
+        h3.titreH3.english Web Developer
         .infojob.english Introduction to JavaScript (JQuery) www.stand-service.com Alphabet Stand Service La Garde, 2012
-        h3.spanish Web developer
+        h3.titreH3.spanish Web developer
         .infojob.spanish introducción a JavaScript (JQuery) www.stand-service.com Alphabet Stand Service La Garde, 2012
         hr
       .jobs
-        h3.french Technicien d&apos;&eacute;tudes en Design et D&eacute;coration
+        h3.titreH3.french Technicien d&apos;&eacute;tudes en Design et D&eacute;coration
         .infojob.french Alphabet Stand Service (MIPCOM/MIPTV, MIDEM, FIF&mldr;), La Garde, 2010-2012
-        h3.english Design and Decoration Technician
+        h3.titreH3.english Design and Decoration Technician
         .infojob.english Alphabet Stand Service (MIPCOM/MIPTV, MIDEM, FIF&mldr;), La Garde, 2010-2012
-        h3.spanish Técnico de Diseño y Decoración
+        h3.titreH3.spanish Técnico de Diseño y Decoración
         .infojob.spanish Alphabet Stand Service (MIPCOM/MIPTV, MIDEM, FIF&mldr;), La Garde, 2010-2012
         hr
       .jobs
-        h3.french Vendeur et Technicien Ski
+        h3.titreH3.french Vendeur et Technicien Ski
         .infojob.french Nevada Sports l&rsquo;Alpe d&rsquo;Huez, 2008-2009
-        h3.english Ski Salesman and Technician
+        h3.titreH3.english Ski Salesman and Technician
         .infojob.english Nevada Sports l&rsquo;Alpe d&rsquo;Huez, 2008-2009
-        h3.spanish Vendedor de esquí y de material deportivo
+        h3.titreH3.spanish Vendedor de esquí y de material deportivo
         .infojob.spanish Nevada Sports l&rsquo;Alpe d&rsquo;Huez, 2008-2009
         hr
       .jobs
-        h3.french Technicien ADSL
+        h3.titreH3.french Technicien ADSL
         .infojob.french British Telecom Critical Systems Le Plessis-Robinson, 2008
-        h3.english ADSL Technician
+        h3.titreH3.english ADSL Technician
         .infojob.english British Telecom Critical Systems Le Plessis-Robinson, 2008
-        h3.spanish Técnico de ADSL
+        h3.titreH3.spanish Técnico de ADSL
         .infojob.spanish British Telecom Critical Systems Le Plessis-Robinson, 2008
         hr
       .jobs
-        h3.french Technicien Ski et Snowboard
+        h3.titreH3.french Technicien Ski et Snowboard
         .infojob.french Intersport, l&rsquo;Alpe d&rsquo;Huez, 2007-2008
-        h3.english Ski and Snowboard Technician
+        h3.titreH3.english Ski and Snowboard Technician
         .infojob.english Intersport, l&rsquo;Alpe d&rsquo;Huez, 2007-2008
-        h3.spanish Técnico de esquí y snowboard
+        h3.titreH3.spanish Técnico de esquí y snowboard
         .infojob.spanish Intersport, l&rsquo;Alpe d&rsquo;Huez, 2007-2008
         hr
       .jobs
-        h3.french Technicien et Administrateur syst&egrave;mes et r&eacute;seaux microsoft
-        h3.english Technician and Administrator Systems and Networks microsoft
-        h3.spanish Técnico y Administrador de Sistemas y Redes microsoft
+        h3.titreH3.french Technicien et Administrateur syst&egrave;mes et r&eacute;seaux microsoft
+        h3.titreH3.english Technician and Administrator Systems and Networks microsoft
+        h3.titreH3.spanish Técnico y Administrador de Sistemas y Redes microsoft
         .infojob.french Administration serveurs Windows et clients GNU/LINUX Maintenance et installation systemes informatique Developpement html php (script de backup) SECOB, St Jean-de-la-Ruelle, 2005-2007
         .infojob.english Windows server administration and GNU / LINUX clients Maintenance and installation of computer systems, html php development (backup script), SECOB, St Jean-de-la-Ruelle, 2005-2007
         .infojob.spanish Administración de servidores Windows y clientes GNU / LINUX Mantenimiento e instalación de sistemas infojobrmáticos, desarollamiento html php (script de copia de seguridad), SECOB, St Jean-de-la-Ruelle, 2005-2007
         hr
       .jobs
-        h3.french Technicien Syst&egrave;mes et R&eacute;seaux
+        h3.titreH3.french Technicien Syst&egrave;mes et R&eacute;seaux
         .infojob.french Maintenance et installation systemes informatique Developpement html php d&apos;un site de devis securis&eacute; Emergence, Orl&eacute;ans, 2004
-        h3.english Systems and Networks Technician
+        h3.titreH3.english Systems and Networks Technician
         .infojob.english Maintenance and installation of computer systems PHP html development of a secured quote site Emergence, Orléans, 2004
-        h3.spanish Técnico de Sistemas y Redes
+        h3.titreH3.spanish Técnico de Sistemas y Redes
         .infojob.spanish Mantenimiento e instalación de sistemas infojobrmáticos PHP html desarrollo de un sitio de cotizaciones seguras Emergence, Orléans, 2004
         hr
       .jobs
-        h3.french Adjoint au responsable de magasin
+        h3.titreH3.french Adjoint au responsable de magasin
         .infojob.french Micromania, St Jean de la Ruelle, 2003
-        h3.english Assistant to the store manager
+        h3.titreH3.english Assistant to the store manager
         .infojob.english Micromania, St Jean de la Ruelle, 2003
-        h3.spanish Asistente del gerente de la tienda
+        h3.titreH3.spanish Asistente del gerente de la tienda
         .infojob.spanish Micromania, St Jean de la Ruelle, 2003
         hr
       .jobs
-        h3.french Emplois &eacute;tudiant
+        h3.titreH3.french Emplois &eacute;tudiant
         .infojob.french Conseiller de vente en espace culturel Leclerc, serveur/barman, Ouvrier boulanger, Employ&eacute; polyvalent chez Intermarch&eacute;
-        h3.english Student jobs
+        h3.titreH3.english Student jobs
         .infojob.english Cultural sales consultant Leclerc, waiter / bartender, Bakery worker, multi-purpose employee at Intermarché
-        h3.spanish Trabajos de estudiante
+        h3.titreH3.spanish Trabajos de estudiante
         .infojob.spanish Asesor de ventas culturales Leclerc, camarero / camarero, trabajador de panadería, empleado multipropósito en Intermarché
     .competen#formation
-      h2.french Formation
-      h2.english Training
-      h2.spanish Formación
+      h2.titreH2.french Formation
+      h2.titreH2.english Training
+      h2.titreH2.spanish Formación
       .jobs
-        h3 IBM i Engineer
+        h3.titreH3 IBM i Engineer
         h5 2018, Pepiniere IBM Paris I
         .infojob RPG IV, CL, SQL, webservices
         hr
       .jobs
-        h3 FullStack Javascript Developer
+        h3.titreH3 FullStack Javascript Developer
         h5 2017, IFOCOP Paris XI
         .infojob.french Développement et management d&apos;un projet web
         .infojob.english Development and management of a web project
@@ -236,11 +235,11 @@ append content
         .infojob.spanish Creación de aplicaciones web y móviles ricas en el back-end de JS
         hr
       .jobs
-        h3.french TP de technicien d&rsquo;&eacute;tude en b&acirc;timent option dessin
+        h3.titreH3.french TP de technicien d&rsquo;&eacute;tude en b&acirc;timent option dessin
         h5.french 2009, AFPA la valette-du-var
-        h3.english Construction Engineer Technician Drawing Option
+        h3.titreH3.english Construction Engineer Technician Drawing Option
         h5.english 2009, AFPA la valette-du-var
-        h3.spanish Técnico de Ingeniería de Construcción Opción de Dibujo
+        h3.titreH3.spanish Técnico de Ingeniería de Construcción Opción de Dibujo
         h5.spanish 2009, AFPA la valette-du-var
         .infojob Photoshop, Autocad, Archicad, Artlantis
         .infojob.french Design, techniques et normes de construction
@@ -251,7 +250,7 @@ append content
         .infojob.spanish Nociones de urbanismo y carreteras
         hr
       .jobs
-        h3 IUT informatique
+        h3.titreH3 IUT informatique
         h5 2003, Orl&eacute;ans
         .infojob.french Syst&eacute;mes et R&eacute;seaux: Administration et d&eacute;ploiementent r&eacute;seau de syst&egrave;mes en environnement Linux, regexp/assembleur
         .infojob.french Base de Donn&eacute;es: Analyse (merise), conception (MCD, MCT), maintenance
@@ -264,19 +263,19 @@ append content
         .infojob.spanish Programación: Langage C, C++, SQL, bsh, assembly language
         hr
       .jobs
-        h3.french Baccalaur&eacute;at Scientifique
+        h3.titreH3.french Baccalaur&eacute;at Scientifique
         h5.french 2001, Orléans
         .infojob.french Sp&eacute;cialit&eacute; physique-chimie
-        h3.english Scientific Baccalaureate Diploma
+        h3.titreH3.english Scientific Baccalaureate Diploma
         h5.english 2001, Orléans
         .infojob.english Specialty physics-chemistry
-        h3.spanish Bachillerato Científico
+        h3.titreH3.spanish Bachillerato Científico
         h5.spanish 2001, Orléans
         .infojob.spanish Especialidad física-química        
     .complemen#complementaire
-      h2.french El&eacute;ments Compl&eacute;mentaires
-      h2.english Additional Info
-      h2.spanish Información Complementaria
+      h2.titreH2.french El&eacute;ments Compl&eacute;mentaires
+      h2.titreH2.english Additional Info
+      h2.titreH2.spanish Información Complementaria
       p.jeu.french Permis : auto, moto.
       p.jeu.english Driving licences: car, motorcycle.
       p.jeu.spanish Permiso: auto, motocicleta.
