--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -12,6 +12,8 @@ html(lang="en")
       meta(property='og:description' content='My Javascript Portfolio')
       meta(property='og:url' content='//mikael.ml')
       link(rel='manifest' href='/static/mikael.manifest')
+      link(rel='stylesheet' href='/static/css/styles.css')
+      link(rel='stylesheet' href='/static/css/cv.css') 
   body
     nav#navBar
       ul
