--- a/public/css/scss/styles.scss
+++ b/public/css/scss/styles.scss
@@ -5,9 +5,9 @@ $colorBody: rgba(19, 42, 121, 0.773);
 %videoSoleil {
     display: none;
     border: 0.7px solid black;
-    width: 100%;
-    border-radius: 28px;
-    margin-top: 5px;
+    width: 98%;
+    border-radius: 10px;
+    margin: 1%;
 }
 %css3Button {
     //border: 0.7px solid white;
