--- a/public/index.pug
+++ b/public/index.pug
@@ -5,8 +5,8 @@ append content
       #m0ncentrage
         .m0ncentrageParafoot
           #INDEX
-            .paraFoot Welcome to my devlab
-              #s0leil
+            #s0leil
+            h1 Welcome to my devlab
             include jeuCV.pug
             .paraFoot My name is Mikael, I'm an IBM RPG &amp; Javascript Developer.
               video#jugglejungle(playsinline autoplay muted loop poster='/static/img/kuansiFalls.webp')
