--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -334,9 +334,9 @@ template {
 #s0leil {
   display: none;
   border: 0.7px solid black;
-  width: 100%;
-  border-radius: 28px;
-  margin-top: 5px;
+  width: 98%;
+  border-radius: 10px;
+  margin: 1%;
 }
 
 .css3buttonRed, .css3button {
