--- a/public/giftedADHD.pug
+++ b/public/giftedADHD.pug
@@ -11,9 +11,22 @@ append content
 						img#english(src='/static/img/uk.svg' alt='English' height='30')
 						img#french(src='/static/img/france.svg' alt='Français' height='30')
 					h3
-						span.english written by: Lynn-nore Chittom &bull; edited by: Daniel P. McGoldrick &bull; updated: 5/25/2011
-						span.french Écrit par: Lynn-nore Chittom &bull; édité par: Daniel P. McGoldrick &bull; mis à jour: 5/25/2011
-							|  &bull; traduit par: Mikaël Garcia
+						span.english written by: Lynn-nore Chittom
+						span.french écrit par: Lynn-nore Chittom
+						br
+						span.english &bull; edited by: Daniel P. McGoldrick &bull;
+						span.french &bull; édité par: Daniel P. McGoldrick &bull;
+						br
+						span.english &bull; PhD Genome Sciences, University of Washington Seattle &bull;
+						span.french &bull; Professeur en Sciences Génétiques , University of Washington Seattle &bull;
+						br
+						span.english &bull; UW - Department of Genome Sciences &bull;
+						span.french &bull; UW - Departement de Sciences Génétiques &bull;
+						br
+						span.english &bull; updated: 5/25/2011 &bull;
+						span.french &bull; mis à jour: 5/25/2011 &bull;
+						br
+						span.french traduit par: Mikaël Garcia le 19 mars 2020
 					p
 						span.english
 							| Parents sometimes wonder if their children can have both ADHD and High IQ levels.
