--- a/public/giftedADHD.pug
+++ b/public/giftedADHD.pug
@@ -4,27 +4,30 @@ append content
 		.table-cell
 			#m0ncentrage
 				#INDEX
-					h1
+					h1.liens
 						span.english ADHD and High IQ: What&apos;s the Connection ?
-						span.french TDAH et QI Élevé : Quels liens ?
+						span.french TDAH et QI Élevé: Quels liens ?
 					p.flags
 						img#english(src='/static/img/uk.svg' alt='English' height='30')
 						img#french(src='/static/img/france.svg' alt='Français' height='30')
-					h3
+					h3.auteurs
 						span.english written by: Lynn-nore Chittom
 						span.french écrit par: Lynn-nore Chittom
 						br
 						span.english &bull; edited by: Daniel P. McGoldrick &bull;
 						span.french &bull; édité par: Daniel P. McGoldrick &bull;
 						br
-						span.english &bull; PhD Genome Sciences, University of Washington Seattle &bull;
-						span.french &bull; Professeur en Sciences Génétiques , University of Washington Seattle &bull;
+						span.english &bull; PhD Genome Sciences &bull;
+						span.french &bull; Professeur en Sciences Génétiques &bull;
+						br
+						span.english &bull; University of Washington Seattle &bull;
+						span.french &bull; University of Washington Seattle &bull;
 						br
 						span.english &bull; UW - Department of Genome Sciences &bull;
 						span.french &bull; UW - Departement de Sciences Génétiques &bull;
 						br
 						span.english &bull; updated: 5/25/2011 &bull;
-						span.french &bull; mis à jour: 5/25/2011 &bull;
+						span.french &bull; mis à jour: 25/05/2011 &bull;
 						br
 						span.french traduit par: Mikaël Garcia le 19 mars 2020
 					p
@@ -111,10 +114,10 @@ append content
 						li
 							span.english Impulsivity
 							span.french Impulsivité
-					h2
+					h2.how
 						span.english How the ADHD Hides
 						span.french Comment le TDAH se camoufle-t-il ?
-					p
+					p.first
 						span.english
 							| Children with high IQ levels are often able to circumvent detection of their ADHD if
 							| it is not caught early.
@@ -203,9 +206,9 @@ append content
 					p
 						span
 							| References:
-							| http://psychcentral.com/news/2009/05/25/high-iq-offers-no-protection-from-adhd-effects/6074.html
+						a(rel='preconnect' href='http://psychcentral.com/news/2009/05/25/high-iq-offers-no-protection-from-adhd-effects/6074.html') http://psychcentral.com/news/2009/05/25/high-iq-offers-no-protection-from-adhd-effects/6074.html
 					p
-						span http://www.webmd.com/add-adhd/guide/adhd-symptoms 
+						a(rel='preconnect' href='http://www.webmd.com/add-adhd/guide/adhd-symptoms') http://www.webmd.com/add-adhd/guide/adhd-symptoms 
 append scripts
 	script(src='/static/js/trad.js' defer)
 	script.
