--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -384,6 +384,22 @@ html {
   text-align: center;
 }
 
+h1.liens {
+  margin-bottom: 0;
+}
+
+h3.auteurs {
+  margin-top: 0;
+}
+
+p.first {
+  margin-top: 0.3em;
+}
+
+h2.how {
+  margin-bottom: 0;
+}
+
 h1,
 h2,
 h3,
@@ -426,7 +442,7 @@ nav a {
   text-align: center;
 }
 
-a.nav {
+a {
   margin: 10px;
   display: inline-block;
   margin-left: 5px;
