nosql into noDB

--- a/public/jeuCV.pug
+++ b/public/jeuCV.pug
@@ -43,11 +43,11 @@ append content
               tr
                 th Nom
                 th Score
-            tbody
-              each player in results
-                tr
-                  td=player.name
-                  td=player.score
+            //tbody
+              //each player in results
+                //tr
+                  //td=player.name
+                  //td=player.score
       //h2.titreH2.french Comp&eacute;tences
       //h2.titreH2.spanish  Competencias
       h2.titreH2#skills Skills
