--- a/public/cv.pug
+++ b/public/cv.pug
@@ -257,19 +257,19 @@ append content
             h2.titreH2.french El&eacute;ments Compl&eacute;mentaires
             h2.titreH2.english Additional Info
             h2.titreH2.spanish Información Complementaria
-            p.jeu.french Permis : auto, moto.
+            .infojob.french Permis : auto, moto.
               img.linkedin(src='/static/img/LinkedIn_Logo.svg' alt='logolinkedin' onclick='openlinkedin();')
-            p.jeu.english Driving licences: car, motorcycle.
+            .infojob.english Driving licences: car, motorcycle.
               img.linkedin(src='/static/img/LinkedIn_Logo.svg' alt='logolinkedin' onclick='openlinkedin();')
-            p.jeu.spanish Permiso: auto, motocicleta.
+            .infojob.spanish Permiso: auto, motocicleta.
               img.linkedin(src='/static/img/LinkedIn_Logo.svg' alt='logolinkedin' onclick='openlinkedin();')
-            p.jeu.french Sports: gym, sports de glisse, VTT.
-            p.jeu.english Sports: gym, board sports, mountain biking.
-            p.jeu.spanish Deporte: gimnasio, deportes de tabla, ciclismo de montaña.
-            p.jeu.french Hobbies: electronique, d&eacute;coration, design, r&eacute;novation.
-            p.jeu.english Hobbies: electronics, decoration, design, renovation.
-            p.jeu.spanish HOBBIES: electrónica, decoración, diseño, renovación.
-            .web www.mikael.ml
+            .infojob.french Sports: gym, sports de glisse, VTT.
+            .infojob.english Sports: gym, board sports, mountain biking.
+            .infojob.spanish Deporte: gimnasio, deportes de tabla, ciclismo de montaña.
+            .infojob.french Hobbies: electronique, d&eacute;coration, design, r&eacute;novation.
+            .infojob.english Hobbies: electronics, decoration, design, renovation.
+            .infojob.spanish HOBBIES: electrónica, decoración, diseño, renovación.
+            //.web www.mikael.ml
 append scripts
   script(src='/static/js/trad.js' defer)
   script.
