--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -20,9 +20,9 @@ html(lang="en")
         li 
           a#intro.nav(rel='preconnect' href='/nomPage?r=index' class='css3button') Intro
         li
-          a#resume.nav(rel='preconnect' href='/nomPage?r=cv' class='css3button') Resume
-        li
-          a#admin.nav(rel='preconnect' href='/nomPage?r=adm1n' class='css3button') Admin
+          a#resume.nav(rel='preconnect' href='/nomPage?r=cv' class='css3button') CV
+        //li
+          //a#admin.nav(rel='preconnect' href='/nomPage?r=adm1n' class='css3button') Admin
         li
           a#adhd.nav(rel='preconnect' href='/nomPage?r=giftedADHD' class='css3button') ADHD
     block content
